--- a/apps/bot/package.json
+++ b/apps/bot/package.json
@@ -17,6 +17,7 @@
 		"@internal/functions": "workspace:*",
 		"@internal/lib": "workspace:*",
 		"@internal/logger": "workspace:*",
+		"@sapphire/discord.js-utilities": "^6.1.0",
 		"croner": "^6.0.3",
 		"discord.js": "^14.11.0"
 	},
