--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
 		"db:push": "dotenv -- turbo run db:push",
 		"db:studio": "dotenv -- turbo run db:studio",
 		"dev": "dotenv -- turbo run dev",
-		"format": "prettier --write \"**/*.{ts,tsx,md}\"",
-		"lint": "turbo run lint",
+		"format": "biome format --write .",
+		"lint": "biome check . --apply",
 		"preinstall": "npx only-allow pnpm",
 		"pretty": "pnpm run clean && pnpm run format && pnpm run lint",
 		"start": "dotenv -- turbo run start"
@@ -19,15 +19,13 @@
 		"node": ">=18.0.0"
 	},
 	"dependencies": {
+		"@biomejs/biome": "^1.4.1",
 		"@sapphire/result": "^2.6.3",
 		"@types/common-tags": "^1.8.1",
 		"common-tags": "^1.8.2",
 		"cross-env": "^7.0.3",
 		"dotenv-cli": "^7.2.1",
 		"dotenv-mono": "^1.3.10",
-		"eslint-config-custom": "workspace:*",
-		"prettier": "latest",
-		"rome": "^12.0.0",
 		"tsc-watch": "^6.0.4",
 		"turbo": "latest"
 	},
