--- a/apps/bot/package.json
+++ b/apps/bot/package.json
@@ -17,7 +17,8 @@
 		"@internal/logger": "workspace:*",
 		"@sapphire/discord.js-utilities": "^6.1.0",
 		"croner": "^6.0.3",
-		"discord.js": "^14.11.0"
+		"discord.js": "^14.11.0",
+		"kiai.js": "^1.1.4"
 	},
 	"devDependencies": {
 		"@types/ms": "^0.7.31",
