--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -10,6 +10,7 @@
 		"@internal/logger": "workspace:*",
 		"@prisma/client": "latest",
 		"discord.js": "^14.11.0",
+		"kiai.js": "^1.1.4",
 		"unb-api": "^1.3.1"
 	},
 	"devDependencies": {
