--- a/package.json
+++ b/package.json
@@ -19,15 +19,15 @@
 		"node": ">=18.0.0"
 	},
 	"dependencies": {
-		"@biomejs/biome": "^1.4.1",
-		"@sapphire/result": "^2.6.3",
-		"@types/common-tags": "^1.8.1",
+		"@biomejs/biome": "^1.8.1",
+		"@sapphire/result": "^2.6.6",
+		"@types/common-tags": "^1.8.4",
 		"common-tags": "^1.8.2",
 		"cross-env": "^7.0.3",
-		"dotenv-cli": "^7.2.1",
-		"dotenv-mono": "^1.3.10",
-		"tsc-watch": "^6.0.4",
-		"turbo": "latest"
+		"dotenv-cli": "^7.4.2",
+		"dotenv-mono": "^1.3.14",
+		"tsc-watch": "^6.2.0",
+		"turbo": "^1"
 	},
 	"devDependencies": {
 		"rimraf": "^4.4.1",
