--- a/package.json
+++ b/package.json
@@ -33,9 +33,6 @@
 		"rimraf": "^4.4.1",
 		"typescript": "^4.9.5"
 	},
-	"workspaces": [
-		"apps/*",
-		"packages/*"
-	],
-	"packageManager": "pnpm@8.0.0"
+	"workspaces": ["apps/*", "packages/*"],
+	"packageManager": "pnpm@9.4.0"
 }
