--- a/packages/tsconfig/package.json
+++ b/packages/tsconfig/package.json
@@ -1,13 +1,9 @@
 {
-    "name": "tsconfig",
-    "version": "0.0.0",
-    "private": true,
-    "files": [
-        "base.json",
-        "nextjs.json",
-        "react-library.json"
-    ],
-    "dependencies": {
-        "@types/node": "^18.19.37"
-    }
+	"name": "tsconfig",
+	"version": "0.0.0",
+	"private": true,
+	"files": ["base.json", "nextjs.json", "react-library.json"],
+	"dependencies": {
+		"@types/node": "^18.19.37"
+	}
 }
