--- a/biome.json
+++ b/biome.json
@@ -23,7 +23,7 @@
 	"javascript": {
 		"formatter": {
 			"semicolons": "asNeeded",
-			"trailingComma": "none"
+			"trailingCommas": "none"
 		}
 	}
 }
