--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
 	"scripts": {
 		"build": "turbo run build",
 		"clean": "turbo run clean",
-		"db:generate": "dotenv -- turbo run db:generate",
-		"db:push": "dotenv -- turbo run db:push",
-		"db:studio": "dotenv -- turbo run db:studio",
-		"dev": "dotenv -- turbo run dev",
+		"db:generate": "env-cmd -- turbo run db:generate",
+		"db:push": "env-cmd -- turbo run db:push",
+		"db:studio": "env-cmd -- turbo run db:studio",
+		"dev": "env-cmd -- turbo run dev",
 		"format": "biome format --write .",
 		"lint": "biome check . --write",
 		"preinstall": "npx only-allow pnpm",
@@ -26,6 +26,7 @@
 		"cross-env": "^7.0.3",
 		"dotenv-cli": "^7.4.2",
 		"dotenv-mono": "^1.3.14",
+		"env-cmd": "^10.1.0",
 		"tsc-watch": "^6.2.0",
 		"turbo": "^2.0.4"
 	},
@@ -33,6 +34,9 @@
 		"rimraf": "^4.4.1",
 		"typescript": "^4.9.5"
 	},
-	"workspaces": ["apps/*", "packages/*"],
+	"workspaces": [
+		"apps/*",
+		"packages/*"
+	],
 	"packageManager": "pnpm@9.4.0"
 }
