--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
 		"node": ">=18.0.0"
 	},
 	"dependencies": {
-		"@biomejs/biome": "^1.8.1",
+		"@biomejs/biome": "^1.8.2",
 		"@sapphire/result": "^2.6.6",
 		"@types/common-tags": "^1.8.4",
 		"common-tags": "^1.8.2",
@@ -31,12 +31,9 @@
 		"turbo": "^2.0.4"
 	},
 	"devDependencies": {
-		"rimraf": "^4.4.1",
-		"typescript": "^4.9.5"
+		"rimraf": "^5.0.7",
+		"typescript": "^5.4.5"
 	},
-	"workspaces": [
-		"apps/*",
-		"packages/*"
-	],
+	"workspaces": ["apps/*", "packages/*"],
 	"packageManager": "pnpm@9.4.0"
 }
