--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -8,13 +8,13 @@
 		"@internal/config": "workspace:*",
 		"@internal/functions": "workspace:*",
 		"@internal/logger": "workspace:*",
-		"@prisma/client": "latest",
+		"@prisma/client": "^5.15.1",
 		"discord.js": "^14.15.3",
-		"kiai.js": "^1.1.5",
+		"kiai.js": "^2.2.0",
 		"unb-api": "^1.3.2"
 	},
 	"devDependencies": {
-		"prisma": "latest",
+		"prisma": "^5.15.1",
 		"tsconfig": "workspace:*"
 	},
 	"scripts": {
