--- a/biome.json
+++ b/biome.json
@@ -1,11 +1,7 @@
 {
 	"$schema": "./node_modules/@biomejs/biome/configuration_schema.json",
 	"files": {
-		"ignore": [
-			"dist",
-			".next",
-			"generated"
-		]
+		"ignore": ["dist", ".next", "generated"]
 	},
 	"formatter": {
 		"formatWithErrors": true
