--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,13 +15,8 @@
 		"strict": true,
 		"target": "ESNext",
 		"paths": {
-			"~/*": [
-				"./src/*"
-			],
+			"~/*": ["./src/*"]
 		}
 	},
-	"exclude": [
-		"node_modules",
-		"dist"
-	]
+	"exclude": ["node_modules", "dist"]
 }
