web ui holy fuck

--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
 		"db:generate": "bun x prisma generate",
 		"db:push": "bun x prisma db push",
 		"db:studio": "bun x prisma studio",
-		"dev": "bun run . --watch",
+		"dev": "bun run build:web --dev && bun run . --watch",
 		"lint": "biome check . --write",
 		"preinstall": "npx only-allow bun",
 		"postinstall": "bun run db:generate",
-		"start": "bun run ."
+		"start": "bun run .",
+		"build:web": "bun run src/web/build.ts"
 	},
 	"engines": {
 		"node": ">=22.12.0"
@@ -37,6 +38,7 @@
 	},
 	"devDependencies": {
 		"@types/node": "22.10.2",
+		"esbuild": "^0.20.0",
 		"prisma": "6.1.0",
 		"typescript": "5.7.2"
 	},
