--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
 		"croner": "9.0.0",
 		"discord.js": "14.16.3",
 		"hono": "^4.8.2",
-		"kiai.js": "2.2.0",
+		"kiai.js": "^3.0.1",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
 		"unb-api": "1.4.0",
